<resources>
    <!-- App title -->
    <string name="app_name">DiceRoller</string>

    <!-- Button label -->
    <string name="roll_label">Roll</string>
    <string name="roll_label_stop">Stop</string>
    <string name="count_up_label">Count Up</string>
    <string name="reset_label">Reset</string>
    <string name="mode_label">Mode</string>
    <string name="hello_text">Hello!</string>
    <string name="base_text">0</string>
    <string name="toast_text">Maximum points</string>


    <string name="mode_one">One Roll Dice</string>
    <string name="mode_two">Two Roll Dice</string>
    <string name="mode_three">Three Roll Dice</string>
</resources>
